--- a/main.css
+++ b/main.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+.border-example span {
+  width: 100px;
+  display: inline-block;
+  height: 100px;
+  background: #efefef;
+  margin-right: 15px;
+}
+
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
